--- a/static/css/content.css
+++ b/static/css/content.css
@@ -47,3 +47,19 @@ body, html {
     border-top: #b67f07 solid 3px;
     border-bottom: #f1b129 solid 3px;
 }
+
+.btn_default {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
+    width: 100%;
+    color: #FFFFFF;
+    background: linear-gradient(to bottom, rgb(32, 78, 246), rgb(0, 22, 228), rgb(4, 1, 154));
+    outline: none;
+    border: none;
+    cursor: pointer;
+    box-sizing: border-box;
+}
