--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,13 @@
 {#        <a href="{% url '' %}" class="navbar__item">Контакты</a>#}
     </section>
     <section class="navbar__items__container">
-        <a class="navbar__item">Вход</a>
-        <a class="navbar__item">Регистрация</a>
+        {% if request.user.is_authenticated %}
+            <a class="navbar__item">{{ request.user.username }}</a>
+            <a class="navbar__item">Выйти</a>
+        {% else %}
+            <a class="navbar__item">Вход</a>
+            <a class="navbar__item">Регистрация</a>
+        {% endif %}
     </section>
 </nav>
 <main class="main" role="main">
