--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Base template{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/content.css' %}">
     <link rel="stylesheet" href="{% static 'css/diploma_editor.css' %}">
+    <link rel="stylesheet" href="{% static 'css/upload.css' %}">
     <link rel="stylesheet" href="{% static 'node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
     <script type="text/javascript" src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
@@ -13,6 +14,7 @@
     <script type="text/javascript" src="{% static 'js/content/diplom_editor.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/history_directions.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/api.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/content/upload_templates.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/content/preview_generate_diploma.js' %}"></script>
 </head>
 <body>
