--- a/templates/diploma_editor.html
+++ b/templates/diploma_editor.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <aside data-action="buttons_container" class="buttons_container">
-        <button data-type="previous"><i class="bi bi-arrow-left-circle" style="color: #fff; margin-right: 10px;"></i>Назад</button>
-        <button data-type="next">Вперед<i class="bi bi-arrow-right-circle" style="color: #fff; margin-left: 10px;"></i></button>
+        <button class="buttons_container_item" data-type="previous"><i class="bi bi-arrow-left-circle" style="color: #fff; margin-right: 10px;"></i>Назад</button>
+        <button class="buttons_container_item" data-type="next">Вперед<i class="bi bi-arrow-right-circle" style="color: #fff; margin-left: 10px;"></i></button>
     </aside>
 {% endblock %}
