--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -2,6 +2,26 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border: rgba(0,0,0,0.5) dashed 4px;
+    border: rgba(0, 0, 0, 0.5) dashed 4px;
     align-items: center;
+    color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 200px;
+    transition: all .2s;
+}
+
+.upload_image_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+    background-position: center center;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    background-color: #979797;
+    border-radius: 10px;
+    border: #333dec solid 2px;
+    margin: 10px;
 }
