--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="{% static 'css/content.css' %}">
     <link rel="stylesheet" href="{% static 'css/diploma_editor.css' %}">
     <link rel="stylesheet" href="{% static 'css/upload.css' %}">
+    <link rel="stylesheet" href="{% static 'css/warnings.css' %}">
+    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
     <link rel="stylesheet" href="{% static 'node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
     <script type="text/javascript" src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/fragments/view_warnings/modal_window.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/content/choose_diploma_template.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/content/diplom_editor.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/history_directions.js' %}"></script>
@@ -27,9 +30,9 @@
     <section class="navbar__items__container">
         {% if request.user.is_authenticated %}
             <a class="navbar__item">{{ request.user.username }}</a>
-            <a class="navbar__item">Выйти</a>
+            <a class="navbar__item" href="/account/sign_out">Выйти</a>
         {% else %}
-            <a class="navbar__item">Вход</a>
+            <a class="navbar__item" href="{% url 'login' %}">Вход</a>
             <a class="navbar__item">Регистрация</a>
         {% endif %}
     </section>
