--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {% load static %}
     <meta charset="UTF-8">
@@ -13,35 +14,35 @@
     <script type="text/javascript" src="{% static 'node_modules/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/fragments/view_warnings/modal_window.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/content/choose_diploma_template.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/content/diplom_editor.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/content/editor/choose_diploma_template.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/content/editor/diplom_editor.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/history_directions.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/api.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/content/upload_templates.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/content/preview_generate_diploma.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/content/editor/upload_templates.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/content/editor/preview_generate_diploma.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/content/account/login.js' %}"></script>
 </head>
+
 <body>
-<nav role="navigation" class="navbar">
-    <section class="navbar__items__container">
-        <a href="{% url 'index' %}" class="navbar__item">Главная</a>
-        <a href="{% url 'editor' %}" class="navbar__item">Редактор грамот</a>
-{#        <a href="{% url '' %}" class="navbar__item">Контакты</a>#}
-    </section>
-    <section class="navbar__items__container">
-        {% if request.user.is_authenticated %}
+    <nav role="navigation" class="navbar">
+        <section class="navbar__items__container">
+            <a href="{% url 'index' %}" class="navbar__item">Главная</a>
+            <a href="{% url 'editor' %}" class="navbar__item">Редактор грамот</a>
+        </section>
+        <section class="navbar__items__container">
+            {% if request.user.is_authenticated %}
             <a class="navbar__item">{{ request.user.username }}</a>
-            <a class="navbar__item" href="/account/sign_out">Выйти</a>
-        {% else %}
+            <a class="navbar__item" href="/account/sign_out">Выйти</a> {% else %}
             <a class="navbar__item" href="{% url 'login' %}">Вход</a>
-            <a class="navbar__item">Регистрация</a>
-        {% endif %}
-    </section>
-</nav>
-<main class="main" role="main">
-    <main data-action="main" style="display: flex; flex-direction: column; width: 800px; align-items: center;">
-        {% block content %}{% endblock %}
+            <a class="navbar__item">Регистрация</a> {% endif %}
+        </section>
+    </nav>
+    <main class="main" role="main">
+        <main data-action="main" style="display: flex; flex-direction: column; width: 800px; align-items: center;">
+            {% block content %}{% endblock %}
+        </main>
     </main>
-</main>
-<footer role="none" class="footer"></footer>
+    <footer role="none" class="footer"></footer>
 </body>
+
 </html>
